RESOLVED FIXED86457
The ARM NEON optimized filters does not compile on THUMB2
https://bugs.webkit.org/show_bug.cgi?id=86457
Summary The ARM NEON optimized filters does not compile on THUMB2
Zoltan Herczeg
Reported 2012-05-15 02:40:37 PDT
Until we fix this issue, it is better to disable them.
Attachments
patch (8.10 KB, patch)
2012-05-15 02:46 PDT, Zoltan Herczeg
ossy: review+
Zoltan Herczeg
Comment 1 2012-05-15 02:46:20 PDT
Csaba Osztrogonác
Comment 2 2012-05-15 02:48:34 PDT
Comment on attachment 141903 [details] patch r=me
Zoltan Herczeg
Comment 3 2012-05-15 03:13:57 PDT
Note You need to log in before you can comment on or make changes to this bug.