The ARM NEON optimized filters does not compile on THUMB2 https://bugs.webkit.org/show_bug.cgi?id=86457

Reviewed by Csaba Osztrogonác.

We should disable the compilation on Thumb2 until we fix the code.

* platform/graphics/filters/FEComposite.cpp:
(WebCore::FEComposite::platformArithmeticSoftware):
* platform/graphics/filters/FEGaussianBlur.cpp:
(WebCore::FEGaussianBlur::platformApplyWorker):
(WebCore::FEGaussianBlur::platformApply):
* platform/graphics/filters/FELighting.cpp:
(WebCore::FELighting::platformApply):
* platform/graphics/filters/arm/FECompositeArithmeticNEON.cpp:
* platform/graphics/filters/arm/FECompositeArithmeticNEON.h:
* platform/graphics/filters/arm/FEGaussianBlurNEON.cpp:
* platform/graphics/filters/arm/FEGaussianBlurNEON.h:
* platform/graphics/filters/arm/FELightingNEON.cpp:
* platform/graphics/filters/arm/FELightingNEON.h:



Canonical link: https://commits.webkit.org/104039@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117048 268f45cc-cd09-0410-ab3c-d52691b4dbfc