Source/WebCore/platform/graphics/filters/arm/FECompositeArithmeticNEON.h
@@ -30,7 +30,7 @@
 #include <wtf/Platform.h>
 
 #if ENABLE(FILTERS)
-#if CPU(ARM_NEON) && COMPILER(GCC)
+#if CPU(ARM_NEON) && CPU(ARM_TRADITIONAL) && COMPILER(GCC)
 
 #include "FEComposite.h"
 
