Source/WebCore/platform/graphics/filters/arm/FEGaussianBlurNEON.cpp
@@ -27,7 +27,7 @@
 #include "config.h"
 #include "FEGaussianBlurNEON.h"
 
-#if CPU(ARM_NEON) && COMPILER(GCC)
+#if CPU(ARM_NEON) && CPU(ARM_TRADITIONAL) && COMPILER(GCC)
 
 #include <wtf/Alignment.h>
 
